--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'idea'
 
 //sourceCompatibility = 1.8
 version = '2.0'
@@ -8,5 +9,7 @@ repositories {
 }
 
 dependencies {
+    compile 'org.slf4j:slf4j-api:1.7.10'
+    testCompile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.10'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
