--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,6 @@ repositories {
 
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.10'
-    testCompile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.10'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile 'org.slf4j:slf4j-simple:1.7.10'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
