--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,15 @@ apply plugin: 'idea'
 version = '2.0'
 
 repositories {
-    mavenCentral()
+    mavenCentral();
+    maven {
+        url "https://oss.sonatype.org/content/groups/public"
+    }
 }
 
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.10'
     compile 'org.slf4j:slf4j-simple:1.7.10'
+    compile 'com.pi4j:pi4j-core:1.0-SNAPSHOT'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
