--- a/build.gradle
+++ b/build.gradle
@@ -15,5 +15,6 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.10'
     compile 'org.slf4j:slf4j-simple:1.7.10'
     compile 'com.pi4j:pi4j-core:1.0-SNAPSHOT'
+    compile 'com.google.guava:guava:18.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
